////////////////////////////////////////////////////////////////////////////////////////////////////
///
/// @file      CustomProductControllerStateOn.h
///
/// @brief     This source code file contains functionality to process events that occur during the
///            product on state. It is an all encompassing state that includes the playing and
///            playable substates.
///
/// @author    Stuart J. Lumby
///
/// @attention Copyright (C) 2017 Bose Corporation All Rights Reserved
///
///            Bose Corporation
///            The Mountain Road,
///            Framingham, MA 01701-9168
///            U.S.A.
///
///            This program may not be reproduced, in whole or in part, in any form by any means
///            whatsoever without the written permission of Bose Corporation.
///
////////////////////////////////////////////////////////////////////////////////////////////////////

////////////////////////////////////////////////////////////////////////////////////////////////////
///
/// The following compiler directive prevents this header file from being included more than once,
/// which may cause multiple declaration compiler errors.
///
////////////////////////////////////////////////////////////////////////////////////////////////////
#pragma once

////////////////////////////////////////////////////////////////////////////////////////////////////
///
///            Included Header Files
///
////////////////////////////////////////////////////////////////////////////////////////////////////
#include <string>
#include "ProductControllerStateOn.h"
#include "HsmState.h"

////////////////////////////////////////////////////////////////////////////////////////////////////
///                            Start of Product Application Namespace                            ///
////////////////////////////////////////////////////////////////////////////////////////////////////
namespace ProductApp
{

////////////////////////////////////////////////////////////////////////////////////////////////////
///
///            Constant Definitions
///
////////////////////////////////////////////////////////////////////////////////////////////////////
constexpr uint32_t MANUAL_BLE_REMOTE_PAIRING_TIMEOUT_SECONDS = 120;

////////////////////////////////////////////////////////////////////////////////////////////////////
///
///            Forward Class Declarations
///
////////////////////////////////////////////////////////////////////////////////////////////////////
class ProductControllerHsm;

////////////////////////////////////////////////////////////////////////////////////////////////////
///
/// @class CustomProductControllerState
///
/// @brief This class is used for executing produce specific actions when in an on state.
///
////////////////////////////////////////////////////////////////////////////////////////////////////
class CustomProductControllerStateOn : public ProductControllerStateOn
{
public:

    CustomProductControllerStateOn( ProductControllerHsm& hsm,
                                    CHsmState*            pSuperState,
                                    Hsm::STATE            stateId,
                                    const std::string&    name    = "CustomProductControllerStateOn" );

    ~CustomProductControllerStateOn( ) override
    {

    }

    bool HandleIntentPlayProductSource( KeyHandlerUtil::ActionType_t intent )       override;
    bool HandleAdaptIQControl( const ProductAdaptIQControl& cmd )                   override;
    bool HandleIntentSetupBLERemote()                                               override;
};

////////////////////////////////////////////////////////////////////////////////////////////////////
///                           End of the Product Application Namespace                           ///
////////////////////////////////////////////////////////////////////////////////////////////////////
}

////////////////////////////////////////////////////////////////////////////////////////////////////
///                                         End of File                                          ///
////////////////////////////////////////////////////////////////////////////////////////////////////
